PVT - Thêm chức năng xuất báo cáo

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26027,7 +26027,8 @@ dl li {
 }
 
 .list-wrapper ul li .form-check {
-  max-width: 90%;
+  max-width: 100%;
+  /*max-width: 90%;*/
 }
 
 .list-wrapper input[type="checkbox"] {
