--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30025,6 +30025,7 @@ textarea.form-control.bao-cao-tuan-style:focus {
   font-size: 16px;
   resize: none;
   font-family: "Times New Roman", Times, serif;
+  color: black;
 }
 select.bao-cao-tuan-style.form-control {
   /*background-color: #e6e6e6;*/
