--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30045,3 +30045,17 @@ select.bao-cao-tuan-style.form-control:focus {
   /*background-color: #f2f2f2;*/
   background-color: white;
 }
+
+
+.border-left-success{
+  border-left: 5px solid #00c292;
+}
+.border-left-danger{
+  border-left: 5px solid #FF5733;
+}
+.border-left-warning{
+  border-left: 5px solid #ffb463;
+}
+.border-left-primary{
+  border-left: 5px solid #03a9f3;
+}
